fixed contact form alignment

--- a/assets/css/subpage.css
+++ b/assets/css/subpage.css
@@ -181,10 +181,11 @@ li {
 
 @media (max-width: 991.98px) { 
   .widecontent {
-  grid-area: 2 / 2 / 4 / 4;
+  grid-area: 2 / 2 / 3 / 4;
   padding-top: 50px;
   max-width: 450px;
   width: 100%;
+  justify-self: center;
   }
 }
 
@@ -197,15 +198,36 @@ form {
     width: 50%;
     height: 2em;
     font-size: 1em;
-    padding: 5px;
+    /* padding: 5px; */
+  }
+}
+
+@media (max-width: 991.98px) { 
+  form input[type=text]{
+    width: 100%;
+    height: 2em;
+    font-size: 1em;
+    /* padding: 5px; */
   }
 }
 
 @media (min-width: 991.98px) { 
   form input[type=textarea]{
-    width: 95%;
+    display: block;
+    width: 100%;
     height: 5em;
     font-size: 1em;
+    padding: 0px;
+    margin: 0px;
+  }
+}
+
+@media (max-width: 991.98px) { 
+  form input[type=textarea]{
+    min-width: 100%;
+    height: 6em;
+    font-size: 1em;
+    margin: none;
   }
 }
 
